--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "httpx>=0.28.1",
-    "langchain-community>=0.3.19",
+    "langchain-community==0.3.24",
     "langchain-experimental>=0.3.4",
-    "langchain-openai>=0.3.8",
-    "langgraph>=0.3.5",
+    "langchain-openai==0.3.16",
+    "langgraph==0.4.3",
     "readabilipy>=0.3.0",
     "python-dotenv>=1.0.1",
     "socksio>=1.0.0",
@@ -25,10 +25,13 @@ dependencies = [
     "pandas>=2.2.3",
     "numpy>=2.2.3",
     "yfinance>=0.2.54",
-    "langchain-deepseek>=0.1.2",
+    "langchain-deepseek==0.1.3",
     "litellm>=1.63.11",
     "json-repair>=0.7.0",
     "jinja2>=3.1.3",
+    "langchain-anthropic==0.3.13",
+    "langchain-google-vertexai==2.0.23",
+    "dashscope>=1.23.3",
 ]
 
 [project.optional-dependencies]
